# idotmatrix-pixel

./: .gitignore  CLAUDE.md  install.sh
idotmatrix-api-client/: pyproject.toml
server/: API.md  README.md  idotmatrix-web.service  pyproject.toml
server/idotmatrix_web/: config.py  device_manager.py  main.py  models.py
server/idotmatrix_web/routes/: device.py  giphy.py  send.py  upload.py
web/: index.html  package-lock.json  package.json
web/server/: main.py
web/src/: App.tsx
web/src/components/: AppShell.tsx  ChronographPanel.tsx  ClockPanel.tsx  ColorPanel.tsx  CommonPanel.tsx  ConnectionPanel.tsx  CountdownPanel.tsx  EcoPanel.tsx  EffectPanel.tsx  GifPanel.tsx  GraffitiPanel.tsx  ImagePanel.tsx  ScoreboardPanel.tsx  Sidebar.tsx  TextPanel.tsx
web/src/context/: DeviceContext.tsx
web/src/lib/: color-utils.ts  image-utils.ts
web/src/protocol/: chunking.ts  http-transport.ts  transport.ts  types.ts
web/src/protocol/commands/: chronograph.ts  clock.ts  common.ts  countdown.ts  eco.ts  effect.ts  fullscreen-color.ts  gif.ts  graffiti.ts  image.ts  scoreboard.ts  text.ts
