[project]
name = "idotmatrix-web"
version = "0.1.0"
description = "Web server for controlling iDotMatrix displays via BLE"
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "idotmatrix-web"
version = "0.1.0"
description = "Web server for controlling iDotMatrix displays via BLE"
authors = ["iDotMatrix Contributors"]
packages = [{ include = "idotmatrix_web" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
pydantic-settings = ">=2.5.0"
python-multipart = ">=0.0.9"
httpx = ">=0.27.0"
idotmatrix = { path = "../idotmatrix-api-client", develop = true }
